apps/drone/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone
